SFUSA/force-app/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/Additional_Information_Order__c.field-meta.xml
<CustomField>
        <fullName>Additional_Information_Order__c</fullName>
        <label>Additional Information Sorting Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>