SFUSA/force-app/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2 Gingers</fullName>
                </value>
                <value>
                    <fullName>Alberta Rye</fullName>
                </value>
                <value>
                    <fullName>Ardmore</fullName>
                </value>
                <value>
                    <fullName>Auchentoshan</fullName>
                </value>
                <value>
                    <fullName>Baker's</fullName>
                </value>
                <value>
                    <fullName>Basil Hayden's</fullName>
                </value>
                <value>
                    <fullName>Beam Suntory Corporate</fullName>
                </value>
                <value>
                    <fullName>Booker's</fullName>
                </value>
                <value>
                    <fullName>Bowmore</fullName>
                </value>
                <value>
                    <fullName>Calico Jack</fullName>
                </value>
                <value>
                    <fullName>Canadian Club</fullName>
                </value>
                <value>
                    <fullName>Connemara</fullName>
                </value>
                <value>
                    <fullName>Courvoisier</fullName>
                </value>
                <value>
                    <fullName>Cruzan</fullName>
                </value>
                <value>
                    <fullName>DeKuyper</fullName>
                </value>
                <value>
                    <fullName>Drink Smart</fullName>
                </value>
                <value>
                    <fullName>EFFEN</fullName>
                </value>
                <value>
                    <fullName>El Tesoro</fullName>
                </value>
                <value>
                    <fullName>Glen Garioch</fullName>
                </value>
                <value>
                    <fullName>Green Ore Wiskey</fullName>
                </value>
                <value>
                    <fullName>Hornitos</fullName>
                </value>
                <value>
                    <fullName>House of Suntory</fullName>
                </value>
                <value>
                    <fullName>Jim Beam</fullName>
                </value>
                <value>
                    <fullName>Jim Beam Global</fullName>
                </value>
                <value>
                    <fullName>Kamora</fullName>
                </value>
                <value>
                    <fullName>Kilbeggan</fullName>
                </value>
                <value>
                    <fullName>Kilbeggan Distillery</fullName>
                </value>
                <value>
                    <fullName>Knob Creek</fullName>
                </value>
                <value>
                    <fullName>Laphroaig</fullName>
                </value>
                <value>
                    <fullName>Legent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>