SFUSA/force-app/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/How_Can_We_Help_You__c.field-meta.xml
<CustomField>
        <fullName>How_Can_We_Help_You__c</fullName>
        <label>How Can We Help You</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Free Product / Merchandise</fullName>
                    <isActive>false</isActive>
                    <label>Free Product / Merchandise</label>
                </value>
                <value>
                    <fullName>Friends of Laphroaig</fullName>
                </value>
                <value>
                    <fullName>Influencers</fullName>
                    <isActive>false</isActive>
                    <label>Influencers</label>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                    <isActive>false</isActive>
                    <label>Ingredients</label>
                </value>
                <value>
                    <fullName>Licencing</fullName>
                    <isActive>false</isActive>
                    <label>Licencing</label>
                </value>
                <value>
                    <fullName>Makers Mark Program</fullName>
                </value>
                <value>
                    <fullName>Merchandise Request / Online store</fullName>
                    <isActive>false</isActive>
                    <label>Merchandise Request / Online store</label>
                </value>
                <value>
                    <fullName>Nutritional Information</fullName>
                    <isActive>false</isActive>
                    <label>Nutritional Information</label>
                </value>
                <value>
                    <fullName>Other Inquiry</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <isActive>false</isActive>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Our Online store</fullName>
                </value>
                <value>
                    <fullName>Product / Packaging issue</fullName>
                    <isActive>false</isActive>
                    <label>Product / Packaging issue</label>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Product or Packaging Issue</fullName>
                </value>
                <value>
                    <fullName>PR or Media Inquiry</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                    <isActive>false</isActive>
                    <label>Public Relations</label>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                    <isActive>false</isActive>
                    <label>Rebates</label>
                </value>
                <value>
                    <fullName>Shelf life</fullName>
                    <isActive>false</isActive>
                    <label>Shelf life</label>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                    <isActive>false</isActive>
                    <label>Sponsorship</label>
                </value>
                <value>
                    <fullName>Sponsorship or Charity</fullName>
                </value>
                <value>
                    <fullName>Visiting the Distillery</fullName>
                </value>
                <value>
                    <fullName>Where to Buy Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>