SFUSA/force-app/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/How_Can_We_Help_You_Order__c.field-meta.xml
<CustomField>
        <fullName>How_Can_We_Help_You_Order__c</fullName>
        <label>How Can We Help You Sorting Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>