SFUSA/force-app/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/Is_Product_Visible__c.field-meta.xml
<CustomField>
        <fullName>Is_Product_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Visible</label>
        <type>Checkbox</type>
    </CustomField>